like lodex-workers

--- a/public/expand.ini
+++ b/public/expand.ini
@@ -18,6 +18,7 @@ post.parameters.1.description = Indent or not the JSON Result
 plugin = @ezs/local
 plugin = @ezs/basics
 plugin = @ezs/storage
+plugin = @ezs/analytics
 
 # Flow configuration
 [JSONParse]
@@ -26,10 +27,12 @@ separator = *
 [expand]
 path = env('path', 'value')
 size = 100
-cache = booster
+cache = boost
 
 [expand/exec]
 command = ./public/expand.py
+[expand/debug]
+text = output
 
 [dump]
 indent = env('indent', false)
