--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-    webservice:
-        container_name: lodex-webservice
+    lodex-workers-python:
+        container_name: lodex-workers-python
         build:
             context: .
             args:
                 - http_proxy
                 - https_proxy
-        image: inistcnrs/lodex-webservice:1.0.0
+        image: inistcnrs/lodex-workers-python:1.0.0
         environment:
             - http_proxy
             - https_proxy
