--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lodex-webservice",
+	"name": "lodex-workers-python",
 	"version": "1.0.0",
 	"description": "Python script for Lodex",
 	"directories": {
@@ -7,7 +7,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/Inist-CNRS/lodex-webservice.git"
+		"url": "git+https://github.com/Inist-CNRS/lodex-workers-python.git"
 	},
 	"keywords": [
 		"ezs"
@@ -15,21 +15,15 @@
 	"author": "Nicolas Thouvenin <nthouvenin@gmail.com>",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/Inist-CNRS/lodex-webservice/issues"
+		"url": "https://github.com/Inist-CNRS/lodex-workers-python/issues"
 	},
-	"homepage": "https://github.com/Inist-CNRS/lodex-webservice#readme",
+	"homepage": "https://github.com/Inist-CNRS/lodex-workers-python#readme",
 	"dependencies": {
 		"@ezs/analytics": "1.11.0",
 		"@ezs/basics": "1.7.3",
-		"@ezs/booster": "1.2.4",
 		"@ezs/core": "1.21.0",
-		"@ezs/istex": "1.1.6",
-		"@ezs/lodex": "1.6.2",
-		"@ezs/loterre": "1.0.25",
-		"@ezs/sparql": "1.0.17",
 		"@ezs/storage": "1.3.2",
-		"@ezs/transformers": "1.2.4",
-		"@ezs/local": "file:./local/",
+		"@ezs/local": "file:./local",
 		"concurrently": "5.3.0",
 		"dotenv-cli": "4.0.0",
 		"node-schedule": "1.3.2",
@@ -38,11 +32,11 @@
 	"scripts": {
 		"prestart": "node ./generate-dotenv.js",
 		"start": "concurrently \"npm:daemon\" \"npm:crontab\"",
-		"daemon": "dotenv -- ezs --daemon ./router",
+		"daemon": "dotenv -- ezs --daemon ./public",
 		"crontab": "dotenv -- node ./crontab.js",
-		"insertversion:readme": "sed -i \"s#\\(lodex-webservice:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" README.md",
-		"insertversion:makefile": "sed -i \"s#\\(lodex-webservice:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" Makefile",
-		"insertversion:docker": "sed -i \"s#\\(lodex-webservice:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" docker-compose*.yml",
+		"insertversion:readme": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" README.md",
+		"insertversion:makefile": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" Makefile",
+		"insertversion:docker": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" docker-compose*.yml",
 		"version": "npm run insertversion:readme && npm run insertversion:makefile && npm run insertversion:docker && git add README.md Makefile docker-compose.debug.yml",
 		"postversion": "git push && git push --tags"
 	},
