--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
 		"@ezs/analytics": "1.11.0",
 		"@ezs/basics": "1.7.3",
 		"@ezs/core": "1.21.0",
-		"@ezs/storage": "1.3.2",
 		"@ezs/local": "file:./local",
+		"@ezs/storage": "1.3.2",
 		"concurrently": "5.3.0",
 		"dotenv-cli": "4.0.0",
 		"node-schedule": "1.3.2",
+		"npm-watch": "0.7.0",
 		"shelljs": "0.8.4"
+	},
+	"watch": {
+		"pip": "./public/requirements.txt"
 	},
 	"scripts": {
 		"prestart": "node ./generate-dotenv.js",
@@ -38,7 +42,8 @@
 		"insertversion:makefile": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" Makefile",
 		"insertversion:docker": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" docker-compose*.yml",
 		"version": "npm run insertversion:readme && npm run insertversion:makefile && npm run insertversion:docker && git add README.md Makefile docker-compose.debug.yml",
-		"postversion": "git push && git push --tags"
+		"postversion": "git push && git push --tags",
+		"pip": "pip3 install -r ./public/requirements.txt"
 	},
 	"devDependencies": {},
 	"peerDependencies": {}
