--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"insertversion:docker": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" docker-compose*.yml",
 		"version": "npm run insertversion:readme && npm run insertversion:makefile && npm run insertversion:docker && git add README.md Makefile docker-compose.debug.yml",
 		"postversion": "git push && git push --tags",
+		"watch": "npm-watch",
 		"pip": "pip3 install -r ./public/requirements.txt"
 	},
 	"devDependencies": {},
