--- a/public/expand.ini
+++ b/public/expand.ini
@@ -7,33 +7,30 @@ post.requestBody.content.application/json.schema.$ref = #/components/schemas/JSO
 post.parameters.0.in = query
 post.parameters.0.name = path
 post.parameters.0.schema.type = string
-post.parameters.0.description = The path in each object to enrich with an Netscity object
+post.parameters.0.description = The path in each object to enrich with an Python script
 post.parameters.1.in = query
 post.parameters.1.name = indent
 post.parameters.1.schema.type = boolean
 post.parameters.1.description = Indent or not the JSON Result
 
-# Necessary plugins
 [use]
 plugin = @ezs/local
 plugin = @ezs/basics
 plugin = @ezs/storage
 plugin = @ezs/analytics
 
-# Flow configuration
 [JSONParse]
 separator = *
 
 [expand]
 path = env('path', 'value')
 size = 100
-cache = boost
+# in production mode, uncomment the following line
+# cache = boost
 
 [expand/exec]
-# Should be executable !
+# command should be executable !
 command = ./public/expand.py
-[expand/debug]
-text = output
 
 [dump]
 indent = env('indent', false)
