--- a/package.json
+++ b/package.json
@@ -30,9 +30,19 @@
 		"npm-watch": "0.7.0",
 		"shelljs": "0.8.4"
 	},
+	"pip": "./public/requirements.txt",
 	"watch": {
-		"pip": "./public/requirements.txt",
-		"chmod": "./public/expand.py"
+		"mod": {
+			"patterns": [
+				"public"
+			],
+			"extensions": "py,pyc,pyd,pyo,json,bin,ftz",
+			"quiet": true,
+			"silent": true,
+			"verbose": false,
+			"ignore": [ ".DAV" ],
+			"runOnChangeOnly": false
+		}
 	},
 	"scripts": {
 		"prestart": "node ./generate-dotenv.js",
@@ -46,7 +56,7 @@
 		"postversion": "git push && git push --tags",
 		"watch": "npm-watch",
 		"pip": "pip3 install -r ./public/requirements.txt",
-		"chmod": "chmod 755 ./public/expand.py"
+		"mod": "./chmod-all ./public/"
 	},
 	"devDependencies": {},
 	"peerDependencies": {}
