--- a/config.json
+++ b/config.json
@@ -8,7 +8,10 @@
 		"EZS_CACHE": false,
 		"CRON_VERBOSE": false,
 		"NODE_OPTIONS": "--max_old_space_size=1024",
-		"NODE_ENV": "production"
+		"NODE_ENV": "production",
+		"PIP_NO_DEPENDENCIES": 1,
+		"PIP_DISABLE_PIP_VERSION_CHECK": 1,
+		"PIP_NO_CACHE_DIR": 0
 	},
 	"#DISABLED# tasks": [
 		{
