--- a/public/expand.ini
+++ b/public/expand.ini
@@ -30,7 +30,7 @@ size = 100
 
 [expand/exec]
 # command should be executable !
-command = ./public/expand.py
+command = ./expand.py
 
 [dump]
 indent = env('indent', false)
