--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
 	},
 	"homepage": "https://github.com/Inist-CNRS/lodex-workers-python#readme",
 	"dependencies": {
-		"@ezs/analytics": "1.11.0",
-		"@ezs/basics": "1.7.3",
-		"@ezs/core": "1.21.0",
+		"@ezs/analytics": "1.12.1",
+		"@ezs/basics": "1.9.1",
+		"@ezs/core": "1.23.1",
 		"@ezs/local": "file:./local",
-		"@ezs/storage": "1.3.2",
-		"concurrently": "5.3.0",
+		"@ezs/storage": "1.4.1",
+		"concurrently": "6.0.0",
 		"dotenv-cli": "4.0.0",
 		"node-schedule": "1.3.2",
-		"npm-watch": "0.7.0",
+		"npm-watch": "0.9.0",
 		"shelljs": "0.8.4"
 	},
 	"watch": {
@@ -49,9 +49,10 @@
 	},
 	"scripts": {
 		"prestart": "node ./generate-dotenv.js",
-		"start": "concurrently \"npm:daemon\" \"npm:crontab\"",
-		"daemon": "cd ./public && dotenv -- ezs --daemon ./",
+		"start": "concurrently --no-color --prefix \"{time}-{name}\" \"npm:daemon\" \"npm:crontab\"",
+		"daemon": "cd ./public && dotenv -e ../.env -- ezs --daemon ./",
 		"crontab": "dotenv -- node ./crontab.js",
+		"watcher": "concurrently --no-color --prefix \"{time}-{name}\" \"npm:watch\"",
 		"insertversion:readme": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" README.md",
 		"insertversion:makefile": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" Makefile",
 		"insertversion:docker": "sed -i \"s#\\(lodex-workers-python:\\)\\([\\.a-z0-9]\\+\\)#\\1${npm_package_version}#g\" docker-compose*.yml",
